--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ body {
 </head>
 
 <body class="htmlNoPages">
-  <span class="gwd-span-1kvv">Unnus Annus EksDe Channels<button id="button_1" class="gwd-button-7vmp">Channel Alpha</button><span class="gwd-span-pb36">This is a reupload site for all "Unus Annus" videos which get deleted. There are many channels which are hidden.</span></span>
+  <span class="gwd-span-1kvv">Unus Annus EksDe Channels<button id="button_1" class="gwd-button-7vmp">Channel Alpha</button><span class="gwd-span-pb36">This is a reupload site for all "Unus Annus" videos which get deleted. There are many channels which are hidden.</span></span>
 
 
 </body></html>
